# vpn-share-tool

./: .gitignore  ARCHITECTURE.md  AndroidManifest.xml  FyneApp.toml  README.md  Release.toml  android.fish  build.fish  build_aar.fish  build_linux.fish  deploy_server.fish  dev.fish  discovery-server.service  fyne_win.fish  go.mod  go.sum  libproxy.py  main.go  main.py  ocr_solver.py  pyproject.toml  run.fish  win-build.fish
common/: captcha.go  pythonenv_other.go  pythonenv_windows.go
core/: api_server.go  ca.crt  cache.go  cache_rules.go  captcha.go  check_update.go  debug.go  debug_har.go  debug_request.go  debug_storage.go  debug_websockets.go  handler_add_proxy.go  handler_can_reach.go  handler_captcha.go  handler_debug.go  handler_get_proxy.go  handler_services.go  handler_update.go  har.go  injector.js  internal_urls.go  ip_tool.go  lan.go  net.go  ocr_solver.py  persistence.go  pipeline.go  proxy.go  proxy_model.go  proxy_monitor.go  register.go  server.go  sys_proc_attr_other.go  sys_proc_attr_windows.go  updater.go
demo_site/: .gitignore  go.mod  main.go
demo_site_web/: README.md  index.html
dev/: build.go  certs.go  deploy.go  deploy_server.go  flutter.go  format.go  inject.go  release_windows.go  root.go  run.go  utils.go
discovery-server/: auto_proxy_creator.go  build.fish  captcha.go  captcha_toggle.go  connection.go  create_proxy.go  debug_toggle.go  discovery-server.service  frontend_embed.go  handle_captcha.go  http_server.go  index.html  instances.go  main.go  proxy_aggregator.go  tagged_urls.go  (+3 more)
rustlib/: Cargo.toml
rustlib/src/: lib.rs
(+252 files in other folders)
