[package]
name = "vpn-share-libproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
local-ip-address = "0.5"
native-tls = "0.2"
url = "2.4"
threadpool = "1.8"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.5.0"
